# -SafeLink-Protocol

./: CMakeLists.txt  Logger.cpp  Logger.hpp  ProtocolHandler.cpp  ProtocolHandler.hpp  README.md  main.cpp  test_security.cpp
